--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300&display=swap");
 
 :root {
-	--iframe-height: 35vh;
+	--iframe-height: 60vh;
 	--filter-height: 50px;
 }
 
@@ -19,16 +19,14 @@
 	}
 
 	table {
-		@apply relative bg-white;
-		border-collapse: collapse;
-		border-spacing: 0;
+		@apply relative bg-white border-spacing-0 border-collapse;
 	}
 
 	thead {
-		@apply sticky bg-slate-300 shadow-lg border-b-slate-900 uppercase top-0;
+		@apply sticky bg-slate-300 shadow-lg border-b-slate-900 uppercase top-0 text-xs;
 
 		@screen lg {
-			top: 0;
+			@apply top-0;
 		}
 	}
 
@@ -40,10 +38,6 @@
 	td {
 		font-size: 1.1rem;
 
-		&:nth-child(2) {
-			@apply text-base;
-		}
-
 		&:nth-child(1),
 		&:nth-child(2) {
 			@apply whitespace-nowrap;
@@ -51,14 +45,17 @@
 
 		&:nth-child(1) {
 			width: 30%;
+			@apply text-3xl lg:text-5xl;
 		}
 
 		&:nth-child(2) {
 			width: 20%;
+			@apply text-lg lg:text-2xl;
 		}
 
 		&:nth-child(3) {
 			width: 30%;
+			@apply text-lg lg:text-2xl;
 		}
 
 		&:nth-child(4) {
@@ -72,7 +69,7 @@
 
 	th,
 	td {
-		@apply w-0 text-left p-4 border-b border-b-slate-300;
+		@apply w-0 text-left p-2 lg:p-4 border-b border-b-slate-300;
 	}
 
 	tbody tr:hover {
@@ -90,7 +87,7 @@
 	}
 
 	[data-details-open] {
-		@apply text-4xl mr-1 border-none text-blue-700 bg-transparent p-0;
+		@apply mr-1 border-none text-blue-700 bg-transparent p-0;
 		font-family: "Noto Serif TC", serif;
 		letter-spacing: 0.3em;
 
