--- a/src/style.scss
+++ b/src/style.scss
@@ -77,7 +77,7 @@
 
 	th,
 	td {
-		@apply w-0 text-left p-2 lg:p-4 border-b border-b-slate-400;
+		@apply w-0 text-left p-1 lg:px-4 lg:py-2 border-b border-b-slate-400;
 	}
 
 	tbody tr:hover {
