--- a/src/style.scss
+++ b/src/style.scss
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300&display=swap");
-
 :root {
 	--iframe-height: 60vh;
 	--filter-height: 50px;
@@ -11,7 +9,9 @@
 
 @layer utilities {
 	.font-chinese {
-		font-family: "Noto Serif TC", serif;
+		font-family: "adobe-kaiti-std", sans-serif;
+		font-weight: 400;
+		font-style: normal;
 	}
 }
 
